# bitcrusher

./: README.md  bitcrusher.desktop  bitcrusher.js  bitcrusher.py  bitcrusher.test.js  index.js  install-gui.sh  install.sh  package-lock.json  package.json  pyproject.toml  test_bitcrusher_gui.py
bitcrusher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
